--- a/Resources/res/plist/level18.plist
+++ b/Resources/res/plist/level18.plist
@@ -326,7 +326,165 @@
 			<key>answer</key>
 			<string>-8</string>
 		</dict>
-
+        <dict>
+			<key>41</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>17+9-2</string>
+			<key>answer</key>
+			<string>24</string>
+		</dict>
+        <dict>
+			<key>42</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4+22-7</string>
+			<key>answer</key>
+			<string>19</string>
+		</dict>
+        <dict>
+			<key>43</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-12+5-8</string>
+			<key>answer</key>
+			<string>-15</string>
+		</dict>
+        <dict>
+			<key>44</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>1-6+19</string>
+			<key>answer</key>
+			<string>14</string>
+		</dict>
+        <dict>
+			<key>45</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-9-4-6</string>
+			<key>answer</key>
+			<string>-19</string>
+		</dict>
+        <dict>
+			<key>46</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-13+2+8</string>
+			<key>answer</key>
+			<string>-3</string>
+		</dict>
+        <dict>
+			<key>47</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>6-8+14</string>
+			<key>answer</key>
+			<string>12</string>
+		</dict>
+        <dict>
+			<key>48</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-7+16-8</string>
+			<key>answer</key>
+			<string>1</string>
+		</dict>
+        <dict>
+			<key>49</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>3-9+17</string>
+			<key>answer</key>
+			<string>11</string>
+		</dict>
+        <dict>
+			<key>50</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>1-2+3</string>
+			<key>answer</key>
+			<string>2</string>
+		</dict>
+        <dict>
+			<key>51</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-2+5-6</string>
+			<key>answer</key>
+			<string>-3</string>
+		</dict>
+        <dict>
+			<key>52</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4-1-5</string>
+			<key>answer</key>
+			<string>-2</string>
+		</dict>
+        <dict>
+			<key>53</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>12-7+17</string>
+			<key>answer</key>
+			<string>-8</string>
+		</dict>
+        <dict>
+			<key>54</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2-8+3</string>
+			<key>answer</key>
+			<string>-3</string>
+		</dict>
+        <dict>
+			<key>55</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-6+1-7</string>
+			<key>answer</key>
+			<string>-12</string>
+		</dict>        <dict>
+			<key>56</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>5-7+4</string>
+			<key>answer</key>
+			<string>2</string>
+		</dict>
+        <dict>
+			<key>57</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>18+6-8</string>
+			<key>answer</key>
+			<string>16</string>
+		</dict>
+        <dict>
+			<key>58</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-3-6-7</string>
+			<key>answer</key>
+			<string>-16</string>
+		</dict>
+        <dict>
+			<key>59</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>-1+5-14</string>
+			<key>answer</key>
+			<string>-10</string>
+		</dict>
+        <dict>
+			<key>60</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>8+4-3</string>
+			<key>answer</key>
+			<string>9</string>
+		</dict>
 	</array>
 </dict>
 </plist>
